--- a/springboot-services/templates/ingress.yaml
+++ b/springboot-services/templates/ingress.yaml
@@ -1,41 +1,20 @@
-{{- if .Values.ingress.enabled -}}
-{{- $fullName := include "springboot-services.fullname" . -}}
-{{- $svcPort := .Values.service.port -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1beta1
-{{- else -}}
-apiVersion: extensions/v1beta1
-{{- end }}
+---
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ $fullName }}
-  labels:
-    {{- include "springboot-services.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
+  namespace: {{ .Values.namespace }}
+  name: {{ .Values.appName }}-ingress
   annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  {{- if .Values.ingress.tls }}
-  tls:
-    {{- range .Values.ingress.tls }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      secretName: {{ .secretName }}
-    {{- end }}
-  {{- end }}
   rules:
-    {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
+    - host: {{ .Values.host }}
       http:
         paths:
-          {{- range .paths }}
-          - path: {{ . }}
+          - path: /
+            pathType: Prefix
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort }}
-          {{- end }}
-    {{- end }}
-  {{- end }}
+              service:
+                name: {{ .Values.service.name }}
+                port:
+                  number: {{ .Values.portNumber }}
