--- a/springboot-services/templates/service.yaml
+++ b/springboot-services/templates/service.yaml
@@ -1,15 +1,13 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "springboot-services.fullname" . }}
-  labels:
-    {{- include "springboot-services.labels" . | nindent 4 }}
+  namespace: default
+  name: {{ .Values.service.name }}
 spec:
   type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
   selector:
-    {{- include "springboot-services.selectorLabels" . | nindent 4 }}
+    app: {{ .Values.appName }}
+  ports:
+    - protocol: TCP
+      port: {{ .Values.portNumber }}
