--- a/springboot-services/templates/deployment.yaml
+++ b/springboot-services/templates/deployment.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: {{ .Values.namespace }}
+#  namespace: {{ .Values.namespace }}
   name: {{ .Values.appName }}
   labels:
     app: {{ .Values.appName }}
