--- a/springboot-services/templates/ingress.yaml
+++ b/springboot-services/templates/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  namespace: {{ .Values.namespace }}
+#  namespace: {{ .Values.namespace }}
   name: {{ .Values.appName }}-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
