--- a/springboot-services/templates/service.yaml
+++ b/springboot-services/templates/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: default
+#  namespace: default
   name: {{ .Values.service.name }}
 spec:
   type: {{ .Values.service.type }}
