--- a/springboot-services/templates/service.yaml
+++ b/springboot-services/templates/service.yaml
@@ -11,3 +11,4 @@ spec:
   ports:
     - protocol: TCP
       port: {{ .Values.portNumber }}
+      nodePort: {{ .Values.service.nodePort }} # TODO make it dynamic
