--- a/angular-apps/templates/ingress.yaml
+++ b/angular-apps/templates/ingress.yaml
@@ -8,8 +8,8 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-#    - host: {{ .Values.host }}
-    - host: evbricks.com
+    - host: {{ .Values.host }}
+#    - host: evbricks.com
       http:
         paths:
           - path: /
