--- a/angular-apps/templates/ingress.yaml
+++ b/angular-apps/templates/ingress.yaml
@@ -12,7 +12,7 @@ spec:
 #    - host: evbricks.com
       http:
         paths:
-          - path: /
+          - path: /{{ .Values.path }}
             pathType: Prefix
             backend:
               service:
