--- a/angular-apps/templates/service.yaml
+++ b/angular-apps/templates/service.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: v1 # TODO use below one thi is test
 kind: Service
 metadata:
   name: {{ .Values.service.name }}
@@ -6,8 +6,21 @@ spec:
   selector:
     app: {{ .Values.appName }}
   ports:
-#    - protocol: TCP
-    - port: 80
-#      targetPort: 80
-#      nodePort: {{ .Values.service.nodePort }} # TODO make it dynamic
-#  type: NodePort
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+      nodePort: {{ .Values.service.nodePort }}
+  type: NodePort
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: {{ .Values.service.name }}
+#spec:
+#  selector:
+#    app: {{ .Values.appName }}
+#  ports:
+##    - protocol: TCP
+#    - port: 80
+##      targetPort: 80
+##      nodePort: {{ .Values.service.nodePort }} # TODO make it dynamic
+##  type: NodePort
