--- a/angular-apps/templates/deployment.yaml
+++ b/angular-apps/templates/deployment.yaml
@@ -16,4 +16,4 @@ spec:
         - name: {{ .Values.appName }}
           image: {{ .Values.ImageName }}:{{ .Values.tag }}
           ports:
-            - containerPort: 80
+            - containerPort: {{ .Values.exposeImagePort }}
