--- a/angular-apps/templates/ingress.yaml
+++ b/angular-apps/templates/ingress.yaml
@@ -15,4 +15,4 @@ spec:
               service:
                 name: {{ .Values.service.name }}
                 port:
-                  number: 80
+                  number: {{ .Values.exposeImagePort }}
