--- a/angular-apps/templates/service.yaml
+++ b/angular-apps/templates/service.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     app: {{ .Values.appName }}
   ports:
-    - port: 80
+    - port: 80 # TODO should be exposeImagePort?
 
 #apiVersion: v1 # TODO use below one thi is test
 #kind: Service
