--- a/angular-apps/templates/deployment.yaml
+++ b/angular-apps/templates/deployment.yaml
@@ -16,4 +16,4 @@ spec:
         - name: {{ .Values.appName }}
           image: {{ .Values.ImageName }}:{{ .Values.tag }}
           ports:
-            - containerPort: {{ .Values.exposeImagePort }} # TODO 80 defau
+            - containerPort: {{ default 80 .Values.service.servicePort }} # TODO 80 defau
