--- a/springboot-service-api/springboot-services-tst/templates/ingress.yaml
+++ b/springboot-service-api/springboot-services-tst/templates/ingress.yaml
@@ -2,12 +2,12 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Values.appName }}-ingress
+  name: {{ .Values.appName }}-ingress-tst
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: {{ .Values.host }}
+    - host: test.{{ .Values.host }}
       http:
         paths:
           - path: /
