--- a/springboot-service-api/springboot-services-tst/templates/deployment.yaml
+++ b/springboot-service-api/springboot-services-tst/templates/deployment.yaml
@@ -35,4 +35,4 @@ spec:
                   name: {{ .Values.secretKeyRef.name }}
                   key: db-password
           ports:
-            - containerPort: {{ .Values.port }}
+            - containerPort: {{ .Values.portTest }}
