--- a/springboot-service-api/springboot-services-tst/templates/ingress.yaml
+++ b/springboot-service-api/springboot-services-tst/templates/ingress.yaml
@@ -16,4 +16,4 @@ spec:
               service:
                 name: {{ .Values.service.name }}
                 port:
-                  number: {{ .Values.portNumber }}
+                  number: {{ .Values.portTest }}
