--- a/springboot-services/templates/service.yaml
+++ b/springboot-services/templates/service.yaml
@@ -10,5 +10,5 @@ spec:
     app: {{ .Values.appName }}
   ports:
     - protocol: TCP
-      port: {{ .Values.portNumber }}
+      port: {{ .Values.port }}
       nodePort: {{ .Values.service.nodePortPrd }} # TODO make it dynamic
