--- a/springboot-services/templates/ingress.yaml
+++ b/springboot-services/templates/ingress.yaml
@@ -17,4 +17,4 @@ spec:
               service:
                 name: {{ .Values.service.name }}
                 port:
-                  number: {{ .Values.portNumber }}
+                  number: {{ .Values.port }}
