--- a/springboot-service-api/springboot-services-tst/templates/ingress.yaml
+++ b/springboot-service-api/springboot-services-tst/templates/ingress.yaml
@@ -14,6 +14,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: {{ .Values.service.name }}
+                name: {{ .Values.service.name }}-tst
                 port:
                   number: {{ .Values.portTest }}
