--- a/springboot-service-api/springboot-services-tst/templates/service.yaml
+++ b/springboot-service-api/springboot-services-tst/templates/service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
 #  namespace: default
-  name: {{ .Values.service.name }}
+  name: {{ .Values.service.name }}-tst
 spec:
   type: {{ .Values.service.type }}
   selector:
